# rustpy_demo

./: .gitignore  Cargo.toml  README.rst  m.py
examples/: raw.rs
src/: main.rs
